--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,34 @@
 services:
+  mlflow:
+    image: python:3.13-slim
+    container_name: mlflow_server
+    working_dir: /mlflow
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./mlruns:/mlflow/mlruns
+    command: >
+      bash -lc "
+      pip install --no-cache-dir mlflow==3.7.0 &&
+      mlflow server
+      --host 0.0.0.0
+      --port 5000
+      --backend-store-uri file:/mlflow/mlruns
+      --default-artifact-root file:/mlflow/mlruns
+      "
+    healthcheck:
+      test: ["CMD", "bash", "-lc", "python -c \"import urllib.request; urllib.request.urlopen('http://localhost:5000')\""]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
   app:
     build: .
     container_name: streamlit_app
     ports:
       - "8501:8501"
     environment:
-      MLFLOW_TRACKING_URI: http://host.docker.internal:5000
+      MLFLOW_TRACKING_URI: http://mlflow:5000
+    depends_on:
+      mlflow:
+        condition: service_healthy
