--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 __pycache__/
 .ipynb_checkpoints/
 *.pyc
+
+# MLflow
+mlruns/
+mlartifacts/
+mlflow.db
+
+# Models gerados localmente
+models/*.joblib
